k3s/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: raycluster-kuberay-virtual-service
  namespace: kubeflow
spec:
  gateways:
  - kubeflow-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /raycluster-kuberay/
    rewrite:
      uri: /
    route:
    - destination:
        host: raycluster-kuberay-head-svc.default.svc.local
        port:
          number: 8265
